header footer mobilka, kontenery mobilka, listy ofert, zaczęty układ strony z opisami ofert

--- a/index.html
+++ b/index.html
@@ -39,37 +39,44 @@
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
-                <h4>Lorem ipsum</h4>
+                <br><h4>Lorem ipsum</h4>
                 <h5>1600 zł/os</h5>
             </div>
         </div>
-        <div class="wakacje" id="w2">
-            <h2> Last Minute! </h2> 
-            <button> Zarezerwuj już teraz!</button>
+        <div class="wrap">
+            <div class="wakacje" id="w2">
+                <h2> Last Minute! </h2> 
+                <button> Zarezerwuj już teraz!</button>
+            </div>
+            <div class="text"> 
+                <br><h4>Lorem ipsum</h4>
+                <h5>1600 zł/os</h5>
+            </div>
         </div>
-        <div class="wakacje" id="w3">
-            <h2> Last Minute! </h2> 
-            <button> Zarezerwuj już teraz!</button>
+        <div class="wrap">
+            <div class="wakacje" id="w3">
+                <br><h2> Last Minute! </h2> 
+                <button> Zarezerwuj już teraz!</button>
+            </div>
+            <div class="text"> 
+                <br><h4>Lorem ipsum</h4>
+                <h5>1600 zł/os</h5>
+            </div>
         </div>
+        <div class="wrap">
             <div class="wakacje" id="w4">
                 <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
+            <div class="text"> 
+                <br><h4>Lorem ipsum</h4>
+                <h5>1600 zł/os</h5>
+            </div>
         </div>
+    </div>
 
     <footer class="footer">   
-        <!-- <div class="footer-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
-        </div>  -->
-        <ul class="footer-menu">
-            <p>© Copyright TravelBag 2024</p>
-            <!-- <li>
-                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-            </li>
-            <li>
-                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li> -->
-        </ul>                
+            <p>© Copyright TravelBag 2024</p>             
     </footer>          
 </body>
 </html>
