--- a/opis4.html
+++ b/opis4.html
@@ -12,7 +12,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -24,58 +23,51 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
     </header> 
-    <div class="main">
-        <div>
-            <img src="assets/opis4.jpg" alt="">
-            <h2> Dlaczego warto wybrać ten hotel </h2>
-            <p> Jedna z najbardziej dziewiczych wysp archipelagu zaprasza na egzotyczny urlop w cudownym i romantycznym otoczeniu. Zatrzymaj się w przestronnych, klimatycznych willach położonych pomiędzy białą plażą, a zielonymi górami, w jedynym hotelu na wyspie, która w 93% jest parkiem narodowym. Nie tylko widoki są tu wyjątkowe, ale również serwis i kuchnia – do wyboru aż 8 restauracji, w tym 7 à la carte, serwujących m.in. kuchnię kreolską i owoce morza. Polecamy zarówno na błogi relaks w otoczeniu przyrody, jak i aktywny wypoczynek – spacery plażą i lasami deszczowymi, przejażdżki na rowerach, kąpiele w basenie, tenis, a może sporty wodne? Spędź urlop tak, jak lubisz, tutaj wszystko jest dla Ciebie! </p>
-        </div>
-        <div>
-            <img src="assets/plaża4.jpg" alt="">
-            <h2>Plaża hotelowa</h2>
-            <li> bezpośrednio przy hotelu </li>
-            <li>piaszczysta</li>
-            <li>łagodne zejście do morza</li>
-            <li>przejście przez teren hotelu</li>
-            <li>bezpłatne leżaki</li>
-        </div>      
-    </div> 
-    <div class="main2">
-        <div>
-            <h3>Lokalizacja:</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.6211008402142!2d55.24576487704497!3d-4.48128114746973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x22e03c367f1b64cd%3A0x951dd23637dfb521!2sHilton%20Seychelles%20Labriz%20Resort%20%26%20Spa!5e0!3m2!1spl!2spl!4v1722584057077!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <div class="main3">
-            <form>
-                <h3>Formularz kontaktowy:</h3>
-                <input type="text" placeholder="Imię..." class="p1"><br>
-                <input type="text" placeholder="Nazwisko..." class="p2"><br>
-                <input type="text" placeholder="E-mail..." class="p3"><br>
-                <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
-                <br>
-            <input type="button" class="button" value="Prześlij"> 
-            <input type="reset" class="button" value="Resetuj">
-            </form>
-        </div>   
-    </div>  
+    <div class="container">
+        <div class="main">
+            <div>
+                <img src="assets/opis4.jpg" alt="">
+                <h2> Dlaczego warto wybrać ten hotel </h2>
+                <p> Jedna z najbardziej dziewiczych wysp archipelagu zaprasza na egzotyczny urlop w cudownym i romantycznym otoczeniu. Zatrzymaj się w przestronnych, klimatycznych willach położonych pomiędzy białą plażą, a zielonymi górami, w jedynym hotelu na wyspie, która w 93% jest parkiem narodowym. Nie tylko widoki są tu wyjątkowe, ale również serwis i kuchnia – do wyboru aż 8 restauracji, w tym 7 à la carte, serwujących m.in. kuchnię kreolską i owoce morza. Polecamy zarówno na błogi relaks w otoczeniu przyrody, jak i aktywny wypoczynek – spacery plażą i lasami deszczowymi, przejażdżki na rowerach, kąpiele w basenie, tenis, a może sporty wodne? Spędź urlop tak, jak lubisz, tutaj wszystko jest dla Ciebie! </p>
+            </div>
+            <div>
+                <img src="assets/plaża4.jpg" alt="">
+                <h2>Plaża hotelowa</h2>
+                <li> bezpośrednio przy hotelu </li>
+                <li>piaszczysta</li>
+                <li>łagodne zejście do morza</li>
+                <li>przejście przez teren hotelu</li>
+                <li>bezpłatne leżaki</li>
+            </div>      
+        </div> 
+        <div class="main2">
+            <div>
+                <h3>Lokalizacja:</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.6211008402142!2d55.24576487704497!3d-4.48128114746973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x22e03c367f1b64cd%3A0x951dd23637dfb521!2sHilton%20Seychelles%20Labriz%20Resort%20%26%20Spa!5e0!3m2!1spl!2spl!4v1722584057077!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="main3">
+                <form>
+                    <h3>Formularz kontaktowy:</h3>
+                    <input type="text" placeholder="Imię..." class="p1"><br>
+                    <input type="text" placeholder="Nazwisko..." class="p2"><br>
+                    <input type="text" placeholder="E-mail..." class="p3"><br>
+                    <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
+                    <br>
+                <input type="button" class="button" value="Prześlij"> 
+                <input type="reset" class="button" value="Resetuj">
+                </form>
+            </div>   
+        </div>  
+    </div>
+    
     <footer class="footer">   
-        <!-- <div class="footer-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
-        </div>  -->
-        <ul class="footer-menu">
-            <li>
-                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-            </li>
-            <li>
-                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li>
-        </ul>                
+        <p>© Copyright TravelBag 2024</p>   
     </footer>     
 </body>
 </html>
