--- a/opis1.html
+++ b/opis1.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="opisy.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="main.js"></script>
     <meta charset="UTF-8">
 </head>
 <body>
@@ -12,7 +13,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -24,59 +24,57 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
     </header> 
-    <div class="main">
-        <div>
-            <img src="assets/opis1.jpg" alt="">
-            <h2> Dlaczego warto wybrać ten hotel </h2>
-            <p> Hotel tylko dla Gości powyżej 12. roku życia w znanym kurorcie Marsa Alam, jest doskonałą opcją dla wszystkich, którzy cenią sobie komfortowy wypoczynek. Na miejscu 2 restauracje, 3 bary, 3 baseny, a także taras z zapierającym dech widokiem na morze. W ciągu dnia możesz spędzić czas na hotelowej plaży, poćwiczyć jogę lub pilates oraz zagrać w siatkówkę plażową, a wieczorem zaszaleć podczas animacji dla dorosłych. Po aktywnym dniu spędzonym w promieniach egipskiego słońca, zrelaksuj się w przestronnych i nowocześnie urządzonych pokojach. </p>
+    <div class="container">
+        <div class="main">
+            <div class="main-img1">
+                <img class="main-img" src="assets/opis1.jpg" alt="">
+            </div>
+            <div> 
+                <h2> Dlaczego warto wybrać ten hotel </h2>
+                <p class="main-text"> Hotel tylko dla Gości powyżej 12. roku życia w znanym kurorcie Marsa Alam, jest doskonałą opcją dla wszystkich, którzy cenią sobie komfortowy wypoczynek. Na miejscu 2 restauracje, 3 bary, 3 baseny, a także taras z zapierającym dech widokiem na morze. W ciągu dnia możesz spędzić czas na hotelowej plaży, poćwiczyć jogę lub pilates oraz zagrać w siatkówkę plażową, a wieczorem zaszaleć podczas animacji dla dorosłych. Po aktywnym dniu spędzonym w promieniach egipskiego słońca, zrelaksuj się w przestronnych i nowocześnie urządzonych pokojach. </p>
+            </div>             
         </div>
-        <div>
-            <img src="assets/plaża1.jpg" alt="">
-        
-            <h2>Plaża hotelowa</h2>
-           <li> bezpośrednio przy hotelu </li>
-           <li>piaszczysto-żwirowa</li>
-           <li>blisko brzegu rafa koralowa</li>
-           <li>zalecane obuwie ochronne</li>
-           <li>bezpłatne parasole, leżaki, materace i ręczniki</li>
-        </div>     
+        <div class="main-dwa">
+            <div class="main-img2">
+                <img class="main-img" src="assets/plaża1.jpg" alt="">
+            </div>
+            <div>
+                <h2>Plaża hotelowa</h2>
+                <li> bezpośrednio przy hotelu </li>
+                <li>piaszczysto-żwirowa</li>
+                <li>blisko brzegu rafa koralowa</li>
+                <li>zalecane obuwie ochronne</li>
+                <li>bezpłatne parasole, leżaki, materace i ręczniki</li>
+            </div>
+        </div>
+        <div class="main2">  
+            <div>
+                <h3>Lokalizacja: </h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.0997850037593!2d34.685896576471364!3d25.434927277558554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15b4a5f504bdd4fd%3A0x304b7faf56118218!2sCasa%20Blue%20Resort!5e0!3m2!1spl!2spl!4v1722512381762!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>        
+            <div class="main3">
+                <form>
+                    <h3>Formularz kontaktowy: </h3>
+                    <input type="text" placeholder="Imię..." class="p1"><br>
+                    <input type="text" placeholder="Nazwisko..." class="p2"><br>
+                    <input type="text" placeholder="E-mail..." class="p3"><br>
+                    <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
+                    <br>
+                <input type="button" class="button" value="Prześlij"> 
+                <input type="reset" class="button" value="Resetuj">
+                </form>
+            </div>   
+        </div>
     </div>
-    <div class="main2">  
-        <div>
-            <h3>Lokalizacja: </h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.0997850037593!2d34.685896576471364!3d25.434927277558554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15b4a5f504bdd4fd%3A0x304b7faf56118218!2sCasa%20Blue%20Resort!5e0!3m2!1spl!2spl!4v1722512381762!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>        
-        <div class="main3">
-            <form>
-                <h3>Formularz kontaktowy: </h3>
-                <input type="text" placeholder="Imię..." class="p1"><br>
-                <input type="text" placeholder="Nazwisko..." class="p2"><br>
-                <input type="text" placeholder="E-mail..." class="p3"><br>
-                <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
-                <br>
-            <input type="button" class="button" value="Prześlij"> 
-            <input type="reset" class="button" value="Resetuj">
-            </form>
-        </div>   
-    </div>
+    
     <footer class="footer">   
-        <!-- <div class="footer-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
-        </div>  -->
-        <ul class="footer-menu">
-            <li>
-                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-            </li>
-            <li>
-                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li>
-        </ul>                
-    </footer>    
+        <p>© Copyright TravelBag 2024</p>   
+    </footer>   
 </body>
 </html>
