--- a/opis2.html
+++ b/opis2.html
@@ -12,7 +12,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -24,58 +23,51 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
-    </header>  
-    <div class="main">
-        <div>
-            <img src="assets/opis2.jpg" alt="">
-            <h2> Dlaczego warto wybrać ten hotel </h2>
-            <p> Hotel w odsłonie premium. Położony w pobliżu siostrzanego hotelu Meli Holiday, zaprojektowany z dbałością o detale, bezpośrednio przy piaszczystej plaży z bezpłatnym serwisem. Blisko stąd także do centrum Golem ze sklepami i restauracjami. Do dyspozycji Gości są 2 baseny, restauracja z kuchnią albańską i międzynarodową oraz bar serwujący różnorodne napoje – zarówno one, jak i posiłki dostępne są w wygodnej formule all inclusive. Oto świetne miejsce na przyjemne wakacje w Albanii. </p>
+    </header> 
+    <div class="container">
+        <div class="main">
+            <div>
+                <img src="assets/opis2.jpg" alt="">
+                <h2> Dlaczego warto wybrać ten hotel </h2>
+                <p> Hotel w odsłonie premium. Położony w pobliżu siostrzanego hotelu Meli Holiday, zaprojektowany z dbałością o detale, bezpośrednio przy piaszczystej plaży z bezpłatnym serwisem. Blisko stąd także do centrum Golem ze sklepami i restauracjami. Do dyspozycji Gości są 2 baseny, restauracja z kuchnią albańską i międzynarodową oraz bar serwujący różnorodne napoje – zarówno one, jak i posiłki dostępne są w wygodnej formule all inclusive. Oto świetne miejsce na przyjemne wakacje w Albanii. </p>
+            </div>
+           <div>
+            <img src="assets/plaża2.jpg" alt="">
+            <h2>Plaża hotelowa</h2>
+            <li> bezpośrednio przy hotelu </li>
+            <li>wydzielona strefa hotelowa</li>
+            <li>piaszczysta</li>
+            <li>łagodne zejście do morza</li>
+            <li>bezpłatne parasole i leżaki</li>
+           </div>     
         </div>
-       <div>
-        <img src="assets/plaża2.jpg" alt="">
-        <h2>Plaża hotelowa</h2>
-        <li> bezpośrednio przy hotelu </li>
-        <li>wydzielona strefa hotelowa</li>
-        <li>piaszczysta</li>
-        <li>łagodne zejście do morza</li>
-        <li>bezpłatne parasole i leżaki</li>
-       </div>     
+        <div class="main2">
+            <div>
+                <h3>Lokalizacja:</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3000.384517850616!2d19.513262077396362!3d41.23518137131959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134fdee0b82f94b3%3A0xd4292fed0be58c7c!2sFafa%20Premium%20Hotel%20%26%20SPA!5e0!3m2!1spl!2spl!4v1722514233250!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>      
+            <div class="main3">
+                <form>
+                    <h3>Formularz kontaktowy:</h3>
+                    <input type="text" placeholder="Imię..." class="p1"><br>
+                    <input type="text" placeholder="Nazwisko..." class="p2"><br>
+                    <input type="text" placeholder="E-mail..." class="p3"><br>
+                    <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
+                    <br>
+                <input type="button" class="button" value="Prześlij"> 
+                <input type="reset" class="button" value="Resetuj">
+                </form>
+            </div>   
+        </div>
     </div>
-    <div class="main2">
-        <div>
-            <h3>Lokalizacja:</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3000.384517850616!2d19.513262077396362!3d41.23518137131959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x134fdee0b82f94b3%3A0xd4292fed0be58c7c!2sFafa%20Premium%20Hotel%20%26%20SPA!5e0!3m2!1spl!2spl!4v1722514233250!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>      
-        <div class="main3">
-            <form>
-                <h3>Formularz kontaktowy:</h3>
-                <input type="text" placeholder="Imię..." class="p1"><br>
-                <input type="text" placeholder="Nazwisko..." class="p2"><br>
-                <input type="text" placeholder="E-mail..." class="p3"><br>
-                <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
-                <br>
-            <input type="button" class="button" value="Prześlij"> 
-            <input type="reset" class="button" value="Resetuj">
-            </form>
-        </div>   
-    </div>
+    
     <footer class="footer">   
-        <!-- <div class="footer-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
-        </div>  -->
-        <ul class="footer-menu">
-            <li>
-                <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-            </li>
-            <li>
-                <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-            </li>
-        </ul>                
-    </footer>    
+        <p>© Copyright TravelBag 2024</p>   
+    </footer>   
 </body>
 </html>
