--- a/opis3.html
+++ b/opis3.html
@@ -12,7 +12,6 @@
         </div>   
         <div class="mobile-container">
             <div class="topnav">
-                <a href="#home" class="active"></a>
                 <ul class="header-menu">
                     <li>
                         <a href="oferty.html">Oferty</a>
@@ -24,58 +23,52 @@
                         <a href="logowanie.html">Zaloguj się</a>
                     </li>
                 </ul>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <!-- <i class="fa fa-bars"></i> -->
-                </a>
+                <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
+                <img src="hamburger.png"  class="header-icon" alt="">
+                </button>
             </div>
         </div>   
     </header> 
-    <div class="main">
-        <div>
-            <img src="assets/opis3.jpg" alt="">
-            <h2> Dlaczego warto wybrać ten hotel </h2>
-            <p> Greckie wakacje w kameralnej atmosferze? Dlaczego nie! Malownicze otoczenie, zielony ogród, basen i nowocześnie urządzone pokoje – to największe atuty hotelu. Przygotowany z myślą o dorosłych, oferuje bary i restaurację serwującą dania kuchni greckiej i międzynarodowej, a fantastyczna piaszczysta plaża Marmari z wydmami znajdująca się w odległości kilkuminutowego spaceru od hotelu jest idealnym miejscem na błogi relaks w promieniach greckiego słońca. </p>
+    <div class="container">
+        <div class="main">
+            <div>
+                <img src="assets/opis3.jpg" alt="">
+                <h2> Dlaczego warto wybrać ten hotel </h2>
+                <p> Greckie wakacje w kameralnej atmosferze? Dlaczego nie! Malownicze otoczenie, zielony ogród, basen i nowocześnie urządzone pokoje – to największe atuty hotelu. Przygotowany z myślą o dorosłych, oferuje bary i restaurację serwującą dania kuchni greckiej i międzynarodowej, a fantastyczna piaszczysta plaża Marmari z wydmami znajdująca się w odległości kilkuminutowego spaceru od hotelu jest idealnym miejscem na błogi relaks w promieniach greckiego słońca. </p>
+            </div>
+            <div>
+                <img src="assets/plaża3.jpg" alt="">
+                <h2>Plaża hotelowa</h2>
+                <li> Marmari </li>
+                <li>publiczna</li>
+                <li>piaszczysta</li>
+                <li>łagodne zejście do morza</li>
+                <li>ok. 700 m od hotelu</li>
         </div>
+        </div>
+       <div class="main2">
         <div>
-            <img src="assets/plaża3.jpg" alt="">
-            <h2>Plaża hotelowa</h2>
-            <li> Marmari </li>
-            <li>publiczna</li>
-            <li>piaszczysta</li>
-            <li>łagodne zejście do morza</li>
-            <li>ok. 700 m od hotelu</li>
+            <h3>Lokalizacja:</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.6058516730186!2d27.15228487734051!3d36.87585216342885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bdfd46117a317b%3A0x185636f582bd80fc!2zzp7Otc69zr_OtM6_z4fOtc6vzr8gU3VtbWVyIFZpbGxhZ2Ugb2YgSGlwcG9jcmF0ZXMgLSBBZHVsdHMgb25seS4!5e0!3m2!1spl!2spl!4v1722583580245!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>  
+        <div class="main3">
+            <form>
+                <h3>Formularz kontaktowy:</h3>
+                <input type="text" placeholder="Imię..." class="p1"><br>
+                    <input type="text" placeholder="Nazwisko..." class="p2"><br>
+                    <input type="text" placeholder="E-mail..." class="p3"><br>
+                    <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
+                    <br>
+            <input type="button" class="button" value="Prześlij"> 
+            <input type="reset" class="button" value="Resetuj">
+            </form>
+        </div>   
+       </div>
     </div>
-    </div>
-   <div class="main2">
-    <div>
-        <h3>Lokalizacja:</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3191.6058516730186!2d27.15228487734051!3d36.87585216342885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14bdfd46117a317b%3A0x185636f582bd80fc!2zzp7Otc69zr_OtM6_z4fOtc6vzr8gU3VtbWVyIFZpbGxhZ2Ugb2YgSGlwcG9jcmF0ZXMgLSBBZHVsdHMgb25seS4!5e0!3m2!1spl!2spl!4v1722583580245!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>  
-    <div class="main3">
-        <form>
-            <h3>Formularz kontaktowy:</h3>
-            <input type="text" placeholder="Imię..." class="p1"><br>
-                <input type="text" placeholder="Nazwisko..." class="p2"><br>
-                <input type="text" placeholder="E-mail..." class="p3"><br>
-                <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
-                <br>
-        <input type="button" class="button" value="Prześlij"> 
-        <input type="reset" class="button" value="Resetuj">
-        </form>
-    </div>   
-   </div>
+    
    <footer class="footer">   
-    <!-- <div class="footer-logo">
-        <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
-    </div>  -->
-    <ul class="footer-menu">
-        <li>
-            <a href="mailto:biuropodróży_travelbag@gmail.com" class="mail">Napisz do nas! biuropodróży_travelbag@gmail.com</a>
-        </li>
-        <li>
-            <a href="tel:+48 678903245" class="contact">Skontaktuj się z nami!</a>
-        </li>
-    </ul>                
+    <p>© Copyright TravelBag 2024</p>   
+    </footer>          
 </footer>    
 </body>
 </html>
