--- a/kontakt.html
+++ b/kontakt.html
@@ -214,6 +214,9 @@
     }    
   }  
     @media only screen and (max-width: 991px){
+        form{
+            width: 300px;
+        }
         img{
             height: 90px;
             width: auto;
