podstrony-mobilka i desktop, opis ofert, podświetlenia

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="header.css">
     <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Moja Strona</title>
@@ -9,8 +10,8 @@
 </head>
 <body>
     <header class="header">
-        <div class="header-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        <div>
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo" class="header-logo"></a>
         </div>   
         <div class="mobile-container">
             <div class="topnav">
@@ -39,7 +40,7 @@
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
-                <br><h4>Lorem ipsum</h4>
+                <h4>Lorem ipsum</h4>
                 <h5>1600 zł/os</h5>
             </div>
         </div>
@@ -49,17 +50,17 @@
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
-                <br><h4>Lorem ipsum</h4>
+                <h4>Lorem ipsum</h4>
                 <h5>1600 zł/os</h5>
             </div>
         </div>
         <div class="wrap">
             <div class="wakacje" id="w3">
-                <br><h2> Last Minute! </h2> 
+                <h2> Last Minute! </h2> 
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
-                <br><h4>Lorem ipsum</h4>
+                <h4>Lorem ipsum</h4>
                 <h5>1600 zł/os</h5>
             </div>
         </div>
@@ -69,7 +70,7 @@
                 <button> Zarezerwuj już teraz!</button>
             </div>
             <div class="text"> 
-                <br><h4>Lorem ipsum</h4>
+                <h4>Lorem ipsum</h4>
                 <h5>1600 zł/os</h5>
             </div>
         </div>
