--- a/oferty.html
+++ b/oferty.html
@@ -2,14 +2,15 @@
 <html>
 <head>
     <link rel="stylesheet" href="oferty.css">
+    <link rel="stylesheet" href="header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="main.js"></script>
     <meta charset="UTF-8">
 </head>
 <body>
     <header class="header">
-        <div class="header-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        <div>
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo" class="header-logo"></a>
         </div>   
         <div class="mobile-container">
             <div class="topnav">
@@ -30,28 +31,38 @@
             </div>
         </div>   
     </header> 
+
     <div class="container">
-        <div class="oferta" id="o1">
+        <a href="opis1.html"> 
+            <div class="oferta" id="o1">
             <div class="tekst">
-                <a href="opis1.html">Hotel Casa Blue Luxury Resort ***** 3899 zł /os.</a>
+                <h2>Hotel Casa Blue Luxury Resort ***** 3899 zł /os.</h2>
             </div>
-        </div>
-        <div class="oferta" id="o2">
+            </div>
+        </a>
+       <a href="opis2.html">
+            <div class="oferta" id="o2">
             <div class="tekst">
-                <a href="opis2.html">Hotel Fafa Premium ***** 1696 zł /os.</a>
+                <h2>Hotel Fafa Premium ***** 1696 zł /os.</h2>
             </div>
-        </div>
-        <div class="oferta" id="o3">
+            </div>
+        </a>      
+        <a href="opis3.html">
+            <div class="oferta" id="o3">
             <div class="tekst">
-                <a href="opis3.html">Hotel Summer Village of Hippocrates ***** 2559 zł /os.</a>
+                <h2>Hotel Summer Village of Hippocrates ***** 2559 zł /os.</h2>
             </div>
-        </div>      
-        <div class="oferta" id="o4">
+            </div> 
+        </a>       
+        <a href="opis4.html">
+            <div class="oferta" id="o4">
             <div class="tekst">
-                <a href="opis4.html">Hilton Seychelles Labriz Resort Spa ***** 6823 zł /os.</a>
+                <h2>Hilton Seychelles Labriz Resort Spa ***** 6823 zł /os.</h2>
             </div>
-        </div>
+            </div>
+        </a>     
     </div>
+
     <footer class="footer">   
         <p>© Copyright TravelBag 2024</p>   
     </footer>    
