--- a/opis4.html
+++ b/opis4.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <link rel="stylesheet" href="opisy.css">
+    <link rel="stylesheet" href="header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
 </head>
 <body>
     <header class="header">
-        <div class="header-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        <div>
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo" class="header-logo"></a>
         </div>   
         <div class="mobile-container">
             <div class="topnav">
@@ -32,37 +33,38 @@
     <div class="container">
         <div class="main">
             <div>
-                <img src="assets/opis4.jpg" alt="">
-                <h2> Dlaczego warto wybrać ten hotel </h2>
-                <p> Jedna z najbardziej dziewiczych wysp archipelagu zaprasza na egzotyczny urlop w cudownym i romantycznym otoczeniu. Zatrzymaj się w przestronnych, klimatycznych willach położonych pomiędzy białą plażą, a zielonymi górami, w jedynym hotelu na wyspie, która w 93% jest parkiem narodowym. Nie tylko widoki są tu wyjątkowe, ale również serwis i kuchnia – do wyboru aż 8 restauracji, w tym 7 à la carte, serwujących m.in. kuchnię kreolską i owoce morza. Polecamy zarówno na błogi relaks w otoczeniu przyrody, jak i aktywny wypoczynek – spacery plażą i lasami deszczowymi, przejażdżki na rowerach, kąpiele w basenie, tenis, a może sporty wodne? Spędź urlop tak, jak lubisz, tutaj wszystko jest dla Ciebie! </p>
+                <img class="main-img" src="assets/opis4.jpg" alt="">
             </div>
+            <div class="main-text">
+                <h2> Dlaczego warto wybrać ten hotel </h2>
+                <span> Jedna z najbardziej dziewiczych wysp archipelagu zaprasza na egzotyczny urlop w cudownym i romantycznym otoczeniu. Zatrzymaj się w przestronnych, klimatycznych willach położonych pomiędzy białą plażą, a zielonymi górami, w jedynym hotelu na wyspie, która w 93% jest parkiem narodowym. Nie tylko widoki są tu wyjątkowe, ale również serwis i kuchnia – do wyboru aż 8 restauracji, w tym 7 à la carte, serwujących m.in. kuchnię kreolską i owoce morza. Polecamy zarówno na błogi relaks w otoczeniu przyrody, jak i aktywny wypoczynek – spacery plażą i lasami deszczowymi, przejażdżki na rowerach, kąpiele w basenie, tenis, a może sporty wodne? Spędź urlop tak, jak lubisz, tutaj wszystko jest dla Ciebie! </span>
+            </div>  
+        </div>           
+        <div class="main2">
             <div>
-                <img src="assets/plaża4.jpg" alt="">
+                <img class="main-img" src="assets/plaża4.jpg" alt="">
+            </div>
+            <div class="main-text">
                 <h2>Plaża hotelowa</h2>
                 <li> bezpośrednio przy hotelu </li>
                 <li>piaszczysta</li>
                 <li>łagodne zejście do morza</li>
                 <li>przejście przez teren hotelu</li>
                 <li>bezpłatne leżaki</li>
-            </div>      
-        </div> 
-        <div class="main2">
-            <div>
+                <div class="main2-button">
+                    <a href="zarezerwuj.html">Rezerwuj</a>
+                </div>
+            </div>             
+        </div>      
+        <div class="main3">
+            <div class="navigation">
                 <h3>Lokalizacja:</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.6211008402142!2d55.24576487704497!3d-4.48128114746973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x22e03c367f1b64cd%3A0x951dd23637dfb521!2sHilton%20Seychelles%20Labriz%20Resort%20%26%20Spa!5e0!3m2!1spl!2spl!4v1722584057077!5m2!1spl!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="main3">
-                <form>
-                    <h3>Formularz kontaktowy:</h3>
-                    <input type="text" placeholder="Imię..." class="p1"><br>
-                    <input type="text" placeholder="Nazwisko..." class="p2"><br>
-                    <input type="text" placeholder="E-mail..." class="p3"><br>
-                    <textarea name="Napisz do nas" placeholder="Napisz do nas..." class="1"></textarea>
-                    <br>
-                <input type="button" class="button" value="Prześlij"> 
-                <input type="reset" class="button" value="Resetuj">
-                </form>
-            </div>   
+            <div class="weather">
+                <h3>Pogoda:</h3>
+                <div id="ww_6027e4fc1e5cd" v='1.3' loc='id' a='{"t":"horizontal","lang":"pl","sl_lpl":1,"ids":[],"font":"Arial","sl_ics":"one_a","sl_sot":"celsius","cl_bkg":"#FFFFFF00","cl_font":"#000000","cl_cloud":"#d4d4d4","cl_persp":"#2196F3","cl_sun":"#FFC107","cl_moon":"#FFC107","cl_thund":"#FF5722"}'>More forecasts: <a href="https://oneweather.org/warsaw/30_days/" id="ww_6027e4fc1e5cd_u" target="_blank">30 day weather forecast Warsaw</a></div><script async src="https://app2.weatherwidget.org/js/?id=ww_6027e4fc1e5cd"></script>
+            </div> 
         </div>  
     </div>
     
