--- a/rejestracja.html
+++ b/rejestracja.html
@@ -2,220 +2,14 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="rejestracja.css">
+    <link rel="stylesheet" href="header.css">
     <script src="main.js"></script>
-    <style>
-    body{
-    font-family: 'Arial';
-    background-color: lightskyblue;
-    margin: 0;
-    padding: 0; 
-    height: 100vh;
-    }
-    *{box-sizing: border-box;}
-    body::before{
-    content: ' ';
-    display: block;
-    background-image: url('assets/5.jpg');
-    background-size: cover ;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.15;
-    position: fixed;
-    }
-    .header {
-        background-color: rgba(0, 0, 128, 0.676);
-        width: 100%;
-        height: 80px;
-        padding: 10px;
-    }
-    img {
-        width: auto;
-        position: absolute;  
-        margin: -20px 0px; 
-        height: 90px;
-        float: left;
-    }
-    .header-menu{
-        float: right;
-        margin: 23px -10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    ul{
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        text-align: center;
-        overflow: hidden;
-    }
-    .header-menu a:hover {
-        background-color: rgba(0, 0, 128, 0.918);
-        transition: background-color 2s;   
-    }
-    .header-menu a {
-        text-decoration: none;
-        font-weight: 600;
-        padding: 14px 16px; 
-        color: white;
-        min-width: 13vw;
-        margin: 0px 40px; 
-        display: block; 
-        width: fit-content;
-    }
-    button.icon{
-        visibility: hidden;
-    }
-    .container{ 
-        background-color: rgba(0, 0, 128, 0.377); 
-        max-width: 600px;
-        max-height: 800px;
-        padding: 15px;  
-        color: white;
-        border-radius: 8px;
-        margin: 15px auto 80px auto;
-    }
-    label{	   
-	    display: flex;	
-	    padding: 10px 0px;
-	}    
-    .button {
-        background-color: rgba(0, 0, 128, 0.514);		
-        margin:20px 0px;
-	    padding:4px 7px;	
-	    border:1px;
-	    width:100px;
-        color: white;
-	}
-    h2{
-        text-align: center;
-    }
-    input{
-            width: 100%;
-            margin: 10px 0px;       
-            border-radius: 5px;
-            border: 2px solid rgba(0, 0, 0, 0.315);
-            box-sizing: border-box;
-            padding: 10px;
-    }
-    .footer{
-        background-color: rgba(0, 0, 128, 0.676);
-        text-align: center;
-        height: 30px;
-        width: 100%;
-        padding: 15px;
-        margin: auto 0 0 0;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-    }
-    p{
-        color: white;
-        margin: -13px 0px;
-        font-size: 12px;
-        padding: 8px;
-    }  
-    @media only screen and (max-width: 620px){  
-        li{
-        flex-direction: column;
-        float: none;
-    }
-    .mobile-container {
-        max-width: 400px;
-        margin: auto;
-        color: white;
-        float: right;
-    }   
-    .header{
-        height: 60px;
-    }
-    .topnav {
-        background-color: rgba(0, 0, 128, 0.676);      
-    }
-    .topnav .header-menu {   
-        right: 0;
-        position: absolute;
-        background-color: inherit;
-        margin: 0 0;
-        width: 100vw;
-        left: 0;
-        top: 60px;
-        display: none;
-    }
-    button.icon{
-        visibility: visible;
-        margin: 5px 0px;
-
-    }
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-    .header-icon{
-        height: initial;
-        width: 26px;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1;
-        object-fit: cover;
-        width: 100%;
-    }
-    .topnav button.icon {
-        background-image: url('assets/hamburger.png'); 
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: block;
-        width: 30px; 
-        height: 30px;
-        padding: 0; 
-        text-align: center; 
-        line-height: 60px; 
-        right: 0;
-        top: 0; 
-        bottom: 0;
-        position: relative;
-        border: tan;
-        background-color: rgba(0, 0, 128, 0.676);
-    }   
-    .topnav button:hover {
-        background-color: lightskyblue;
-    }    
-  }  
-
-    @media only screen and (max-width: 991px){
-        img{
-            height: 90px;
-            width: auto;
-            margin: -20px 0px;
-        }
-    .container{
-        width: 300px;
-        height: 330px; 
-    }
-    .button{
-        width: 70px;
-        height: 45px;
-    }
-}
-    </style>
 </head>
 <body>
     <header class="header">
-        <div class="header-logo">
-            <a href="index.html"><img src="assets/samolot1.png" alt="logo"></a>
+        <div>
+            <a href="index.html"><img src="assets/samolot1.png" alt="logo" class="header-logo"></a>
         </div>   
         <div class="mobile-container">
             <div class="topnav">
@@ -247,9 +41,10 @@
             <input type="reset" class="button" value="Resetuj">
         </div>
         </form>
+        </div>
 
-        <footer class="footer">   
-            <p>© Copyright TravelBag 2024</p>     
-        </footer>  
+    <footer class="footer">   
+        <p>© Copyright TravelBag 2024</p>     
+    </footer>  
 </body>
 </html>
