podstrony, mobilka, kod organizacja

--- a/logowanie.html
+++ b/logowanie.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="logowanie.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/logowanie.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="main.js"></script>
 </head>
 <body>
@@ -25,7 +26,6 @@
                     </li>
                 </ul>
                 <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                <img src="hamburger.png"  class="header-icon" alt="">
                 </button>
             </div>
         </div>   
