--- a/opis1.html
+++ b/opis1.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="opisy.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/opisy.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="main.js"></script>
     <meta charset="UTF-8">
@@ -26,7 +27,6 @@
                     </li>
                 </ul>
                 <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                <img src="hamburger.png"  class="header-icon" alt="">
                 </button>
             </div>
         </div>   
@@ -47,13 +47,15 @@
             </div>
             <div class="main-text">
                 <h2>Plaża hotelowa</h2>
-                <li>bezpośrednio przy hotelu </li>
-                <li>piaszczysto-żwirowa</li>
-                <li>blisko brzegu rafa koralowa</li>
-                <li>zalecane obuwie ochronne</li>
-                <li>bezpłatne parasole, leżaki, materace</li>
-                <li>bezpłatne parasole, leżaki, materace</li>
-                <li>bezpłatne parasole, leżaki, materace</li>
+                <ul>
+                    <li>bezpośrednio przy hotelu </li>
+                    <li>piaszczysto-żwirowa</li>
+                    <li>blisko brzegu rafa koralowa</li>
+                    <li>zalecane obuwie ochronne</li>
+                    <li>bezpłatne parasole, leżaki, materace</li>
+                    <li>bezpłatne parasole, leżaki, materace</li>
+                    <li>bezpłatne parasole, leżaki, materace</li>
+                </ul>
                 <div class="main2-button">
                     <a href="zarezerwuj.html">Rezerwuj</a>
                 </div>
