--- a/opis4.html
+++ b/opis4.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="opisy.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/opisy.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/header.css">
+    <script src="main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
 </head>
@@ -25,7 +27,6 @@
                     </li>
                 </ul>
                 <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                <img src="hamburger.png"  class="header-icon" alt="">
                 </button>
             </div>
         </div>   
@@ -46,11 +47,13 @@
             </div>
             <div class="main-text">
                 <h2>Plaża hotelowa</h2>
-                <li> bezpośrednio przy hotelu </li>
-                <li>piaszczysta</li>
-                <li>łagodne zejście do morza</li>
-                <li>przejście przez teren hotelu</li>
-                <li>bezpłatne leżaki</li>
+                <ul>
+                    <li> bezpośrednio przy hotelu </li>
+                    <li>piaszczysta</li>
+                    <li>łagodne zejście do morza</li>
+                    <li>przejście przez teren hotelu</li>
+                    <li>bezpłatne leżaki</li>
+                </ul>
                 <div class="main2-button">
                     <a href="zarezerwuj.html">Rezerwuj</a>
                 </div>
