--- a/zarezerwuj.html
+++ b/zarezerwuj.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0" />
-    <link rel="stylesheet" href="zarezerwuj.css">
-    <link rel="stylesheet" href="kontakt.css"> 
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/zarezerwuj.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/kontakt.css"> 
+    <link rel="stylesheet" href="css/header.css">
     <script src="main.js"></script>
 </head>
 <body>
@@ -26,7 +27,6 @@
                     </li>
                 </ul>
                 <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                <img src="hamburger.png"  class="header-icon" alt="">
                 </button>
             </div>
         </div>   
