--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Moja Strona</title>
@@ -27,7 +28,6 @@
                     </li>
                 </ul>
                 <button href="javascript:void(0);"  class="icon" onclick="myFunction()">
-                <img src="hamburger.png"  class="header-icon" alt="">
                 </button>
             </div>
         </div>   
