podstrony, mobilka, kod organizacja

--- a/oferty.html
+++ b/oferty.html
@@ -17,7 +17,10 @@
             <div class="topnav">
                 <ul class="header-menu">
                     <li>
-                        <a href="oferty.html">Oferty</a>
+                        <a href="oferty.html" style="background-color: rgba(0, 0, 128, 0.918);
+                        border-radius: 5px;
+                        color: rgb(230, 186, 12);
+                        transition: background-color 2s;   ">Oferty</a>
                     </li>
                     <li>
                         <a href="kontakt.html">Kontakt</a>
