--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script src="main.js"></script>
     <meta charset="UTF-8">
     <title>Moja Strona</title>
