--- a/logowanie.html
+++ b/logowanie.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/logowanie.css">
+    
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/logowanie.css">
     <script src="main.js"></script>
 </head>
 <body>
@@ -42,6 +44,7 @@
             <input type="reset" class="button" value="Resetuj">
         </form>
    </div>
+</div>
     <footer class="footer">   
         <p>© Copyright TravelBag 2024</p>     
     </footer>  
