--- a/opis2.html
+++ b/opis2.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="css/opisy.css">
     <link rel="stylesheet" href="css/body.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/footer.css">
     <script src="main.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
